validator/openshift/backend/test/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: validator-backend
  namespace: f343b4-test
spec:
  selector:
    app: validator-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
